# flowertune-llm

./: .gitconfig  .gitignore  CONFIG_UPLOAD_README.md  HF_UPLOAD_README.md  README.md  README_flwr.md  README_models.md  UPLOAD_GUIDE.md  download_models.py  eval_config.toml  framework.md  models_config.yaml  pyproject.toml  run_all_experiments.sh  run_experiments.py  upload_all_models.sh  upload_example.sh  upload_finance_model.py  upload_from_config.py  upload_from_config.sh  upload_medical_models.py  upload_selected_models.sh  upload_to_hf.py  upload_to_huggingface.py
flowertune-eval-code/: evaluation_results_humaneval.json  evaluation_results_mbpp.json  evaluation_results_multiple-cpp.json  evaluation_results_multiple-js.json  generations_humaneval.json  generations_mbpp.json  generations_multiple-cpp.json  generations_multiple-js.json  references_humaneval.json  references_multiple-cpp.json  references_multiple-js.json
flowertune-eval-finance/: eval.py
flowertune-eval-finance/benchmarks/: acc_fiqa_fl.txt  acc_fpb_fl.txt  acc_tfns_fl.txt  generation_fiqa_fl.jsonl  generation_fpb_fl.jsonl  generation_tfns_fl.jsonl
flowertune-eval-general-nlp/: README.md  eval.py  requirements.txt
flowertune-eval-general-nlp/benchmarks/: acc_mmlu_humanities_fl.txt  acc_mmlu_social_sciences_fl.txt  acc_mmlu_stem_fl.txt  acc_test_stem_fl.txt  generation_mmlu_social_sciences_fl.jsonl  generation_mmlu_stem_fl.jsonl
flowertune-eval-medical/: eval.py  peft_helper.py
flowertune-eval-medical/benchmarks/: acc_careqa_fl.txt  acc_medmcqa_fl.txt  acc_medqa_fl.txt  acc_pubmedqa_fl.txt  generation_medmcqa_fl.jsonl  generation_medqa_fl.jsonl  (+1 more)
flwr_nlp/: __init__.py  client_app.py  dataset.py  models.py  server_app.py  strategy.py
